# Transcritor

./: .env.example  .gitignore  CHECKLIST_HUMANO.md  CHECKLIST_PRODUCAO.md  OPERATIONS_STATUS.md  PASSO_A_PASSO_CONFIGURACAO_CHAVES.md  PLANO_AGENTE_ATAS.md  PLANO_PIPELINE_MULTIAGENTE.md  PROCESSO-Atualizacao-Dashboards.md  PROCESSO-Criacao-ATAs.md  PROCESSO-Execucao-Scripts.md  PROCESSO-Gestao-Sprints-Agil.md  PROCESSO-Git-Workflow-Colaborativo.md  README.md  RUNBOOK_OPERACIONAL.md  package-lock.json  skills-lock.json  transcricao_Voz_260411_020256.txt
Template de atas/: 04-GARIMPO-TEMPLATE-R02.md  05-PLANO-NEGOCIO-TEMPLATE-R01.md  05-SPRINT-SEMANAL-TEMPLATE-R00.md  06-BULLETJOURNAL-TEMPLATE.md  07-CLIENTE-LEAD-TEMPLATE-R01.md  07-WEEKLY-REVIEW-TEMPLATE.md  08-ATA-CONTATO-CLIENTE-TEMPLATE-R00.md  09-PESQUISA-MERCADO-TEMPLATE-R01.md  10 - BUSINESS_PLAN_TEMPLATE.md  12-TEMPLATE-LEADS.md
Whisper de voz/: Reuniao  (2).txt  diagnosticar_audio.py  diagnosticar_audio_simples.py  diagnosticar_salvar.py  diagnostico_resultado.txt  processar_audios_raiz.py  relatorio_consolidado_transcricoes.txt  resultado_diagnostico.txt  (+54 more)
ata_agent/: README.md  pyproject.toml  requirements.txt
ata_agent/ata_agent/: __init__.py  __main__.py  config.py  contracts.py  event_store.py  gemini_client.py  logging_utils.py  orchestrator.py  store.py
ata_agent/ata_agent/email/: __init__.py  imap_listener.py  smtp_dispatcher.py
ata_agent/ata_agent/prompts/: template_default.md
ata_agent/tests/: test_config.py  test_gemini_parse.py  test_pipeline_happy_path.py  test_store.py  test_validate_ata.py
(+197 files in other folders)
